--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TSA2_23.loader.js";
+      var loaderUrl = buildUrl + "/TSAGIT.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TSA2_23.data",
-        frameworkUrl: buildUrl + "/TSA2_23.framework.js",
-        codeUrl: buildUrl + "/TSA2_23.wasm",
+        dataUrl: buildUrl + "/TSAGIT.data",
+        frameworkUrl: buildUrl + "/TSAGIT.framework.js",
+        codeUrl: buildUrl + "/TSAGIT.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TSA Project",
